--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
           python-version: ${{ matrix.pyVersion }}
 
       - name: Run tests
-        run: make dev install test
+        run: make install_dev
 
-      - name: Publish test coverage
-        uses: codecov/codecov-action@v1
+#      - name: Publish test coverage
+#        uses: codecov/codecov-action@v1
