--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,10 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "black",
+    "flit",
     "pytest",
-    "tox"
+    "pytest-cov",
+#    "tox"
 ]
 
 [project.urls]
