--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,5 +33,5 @@ jobs:
       - name: Run tests
         run: make dev install test
 
-      - name: Publish test coverage
-        uses: codecov/codecov-action@v1
+#      - name: Publish test coverage
+#        uses: codecov/codecov-action@v1
