--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,3 +24,7 @@ jobs:
 
       - name: Build and publish medaillon to pypi
         run: make publish
+        env:
+          FLIT_INDEX_URL: ${{ secrets.FLIT_INDEX_URL }}
+          FLIT_USERNAME: ${{ secrets.FLIT_USERNAME }}
+          FLIT_PASSWORD: ${{ secrets.FLIT_PASSWORD }}
