--- a/.gitignore
+++ b/.gitignore
@@ -17,12 +17,12 @@
 secrets/*.*
 
 # --------------------------------------------------------------------------- #
-# Installation                                                                #
+# Installation and build                                                      #
 # --------------------------------------------------------------------------- #
 
 #**/*.egg-info/**
+build
 dist
-#**/dist/**
 
 # --------------------------------------------------------------------------- #
 # Testing and coverage                                                        #
