--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,12 +19,12 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install flit
-        run: pip install flit
-
       - name: Build and publish laktory to pypi
         run: make publish
         env:
           FLIT_INDEX_URL: ${{ vars.FLIT_INDEX_URL }}
           FLIT_USERNAME: ${{ vars.FLIT_USERNAME }}
           FLIT_PASSWORD: ${{ secrets.FLIT_PASSWORD }}
+          TWINE_REPOSITORY_URL: ${{ vars.TWINE_REPOSITORY_URL }}
+          TWINE_USERNAME: ${{ vars.TWINE_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
