--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ classifiers = [
 dynamic = ["version"]
 dependencies = [
     "databricks-sdk",
+    "jsonref",
     "pyspark",
     "pyyaml",
     "pydantic>=2",
@@ -41,6 +42,8 @@ dependencies = [
 dev = [
     "black",
     "flit",
+    "databricks-sdk",
+    "databricks-sql-connector",
 ]
 test = [
     "pytest",
