--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ dev = [
     "databricks-sdk",
     "databricks-sql-connector",
     "flit",
-    "pyspark",
+#    "pyspark",
 ]
 test = [
     "pytest",
