--- a/tests/googl.yaml
+++ b/tests/googl.yaml
@@ -2,5 +2,5 @@ name: "close"
 type: "double"
 unit: "USD"
 catalog_name: "lakehouse"
-database_name: "markets"
+schema_name: "markets"
 table_name: "googl"
