--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,8 +42,6 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "black",
-#    "databricks-sdk",
-#    "databricks-sql-connector",
     "flit",
 ]
 spark = [
@@ -55,6 +53,7 @@ test = [
     "pytest",
     "pytest-cov",
 #    "tox"
+    "yfinance",
 ]
 azure = [
     "azure-identity",
