--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,12 +63,15 @@ azure = [
     "azure-storage-blob",
     "pulumi_azure",
     "pulumi_azure_native",
+    "settus[azure]",
 ]
 aws = [
     "boto3",
     "pulumi_aws",
+    "settus[aws]",
 ]
 gcp = [
+    "settus[gcp]",
 ]
 
 [project.urls]
