--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,6 +77,7 @@ nav:
     - Design Principles: concepts/design.md
     - Models: concepts/models.md
     - Data Event: concepts/dataevent.md
+    - Data Source: concepts/datasource.md
     - Table: concepts/table.md
     - Pipeline: concepts/pipeline.md
     - Deployment: concepts/deployment.md
