Major documentation refactoring and update (#58)

--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,10 @@ secrets/*.*
 # Installation and build                                                      #
 # --------------------------------------------------------------------------- #
 
-#**/*.egg-info/**
+**/*.egg-info
 build
 dist
+/site/
 
 # --------------------------------------------------------------------------- #
 # Testing and coverage                                                        #
@@ -45,4 +46,5 @@ junit
 
 # Tox files - Package-specific
 #**/.tox/**
+
 
