--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,10 @@ dependencies = [
 dev = [
     "black",
     "flit",
+    "mkdocs",
+    "mkdocstrings[python]",
+    "mkdocs-material",
+#    "mkdocs-snippets",
 ]
 spark = [
     "pandas",
@@ -60,12 +64,15 @@ azure = [
     "azure-storage-blob",
     "pulumi_azure",
     "pulumi_azure_native",
+    "settus[azure]",
 ]
 aws = [
     "boto3",
     "pulumi_aws",
+    "settus[aws]",
 ]
 gcp = [
+    "settus[gcp]",
 ]
 
 [project.urls]
