--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,12 +8,16 @@ extra_css:
   - stylesheets/extra.css
 
 markdown_extensions:
+  - admonition
   - pymdownx.snippets  # link between markdown (changelog)
   - pymdownx.superfences  # code blocks titles
+  - pymdownx.details
   - attr_list
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
+
+
 
 theme:
   name: material
@@ -82,14 +86,18 @@ nav:
     - Data Source: concepts/datasource.md
     - Table: concepts/table.md
     - Pipeline: concepts/pipeline.md
-    - Deployment: concepts/deployment.md
-    - Spark: concepts/spark.md
+    - Data Governance: concepts/governance.md
+    - Deployment (IaC): concepts/deployment.md
+    - Spark Extension: concepts/spark.md
 
   - How-To Guides:
     - Users: guides/users.md
     - Data Catalog: guides/catalog.md
     - Data Table: guides/table.md
     - Data Pipeline: guides/pipeline.md
+    - Compute: guides/compute.md
+    - Job: guides/job.md
+    - Secrets: guides/secrets.md
 
   - Lakehouse As Code: lakehouseascode.md
   - API Reference: reference.md
