--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,10 @@
 name: release
 
 on:
+  workflow_dispatch:
+    logLevel:
+      description: 'Log level'
+      default: 'warning'
   pull_request:
     types:
       - closed
