--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     logLevel:
       description: 'Log level'
-      default: 'warning'
+      default: 'info'
     branches:
       - main
 #  pull_request:
@@ -24,6 +24,25 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+
+  tag:
+    runs-on: ubuntu-latest
+    needs: release
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Git
+        run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
+
+      - name: Create release tag
+#        run: git tag v${{ steps.increment_version.outputs.new_version }}
+        run: git tag test_tag0
+
+      - name: Push release tag
+#        run: git push origin v${{ steps.increment_version.outputs.new_version }}
+        run: git push origin test_tag0
+
 
 #      - name: Build and publish laktory to pypi
 #        run: make publish
