--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,16 +37,16 @@ jobs:
 
   tag:
     permissions: # write-all
-      actions: write
+#      actions: write
 #      checks: read|write|none
 #      contents: read|write|none
 #      deployments: read|write|none
 #      id-token: read|write|none
-#      issues: read|write|none
-#      discussions: read|write|none
-#      packages: read|write|none
-#      pages: read|write|none
-#      pull-requests: read|write|none
+      issues: write
+      discussions: write
+      packages: write
+      pages: write
+      pull-requests: write
     runs-on: ubuntu-latest
     needs: publish
     steps:
@@ -58,7 +58,7 @@ jobs:
 
       - name: Create release tag
 #        run: git tag v${{ steps.increment_version.outputs.new_version }}
-        run: git tag test_tag0
+        run: git tag test_tag1
 
       - name: Push release tag
 #        run: git push origin v${{ steps.increment_version.outputs.new_version }}
