Test release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,11 +37,11 @@ jobs:
 
   tag:
     permissions: # write-all
-#      actions: write
-#      checks: write
-#      contents: write
-      deployments: write
-      id-token: write
+      actions: write
+      checks: write
+      contents: write
+#      deployments: write
+#      id-token: write
 #      issues: write
 #      discussions: write
 #      packages: write
