Test release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,8 +38,8 @@ jobs:
   tag:
     permissions: # write-all
       actions: write
-      checks: write
-      contents: write
+#      checks: write
+#      contents: write
 #      deployments: write
 #      id-token: write
 #      issues: write
