--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,10 +36,10 @@ jobs:
 #          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
 
   tag:
-    permissions: # write-all
+    permissions:
 #      actions: write
 #      checks: write
-      contents: write
+      contents: write  # required to push release tag
 #      deployments: write
 #      id-token: write
 #      issues: write
@@ -53,15 +53,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Get version
+        id: get_version
+        run: echo "::set-output name=version::$(grep -oP "version = \'\K[^\']+" _version.py)"
+
       - name: Set up Git
         run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
 
       - name: Create release tag
-#        run: git tag v${{ steps.increment_version.outputs.new_version }}
-        run: git tag test_tag1
+        run: git tag test-v${{ steps.get_version.outputs.version }}
+#        run: git tag test_tag1
 
       - name: Push release tag
-#        run: git push origin v${{ steps.increment_version.outputs.new_version }}
-        run: git push origin test_tag1
+        run: git push origin test-v${{ steps.get_version.outputs.version }}
+#        run: git push origin test_tag1
 
 
