--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,13 +58,13 @@ jobs:
         run: echo "version=$(grep -oP "version = \'\K[^\']+" laktory/_version.py)" >> $GITHUB_OUTPUT
 
       - name: Get version
-        run: echo $GITHUB_OUTPUT
+        run: echo ${{ steps.get_version.outputs.version }}
 
       - name: Set up Git
         run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
 
       - name: Create release tag
-        run: git tag test-v$GITHUB_OUTPUT
+        run: git tag test-v${{ steps.get_version.outputs.version }}
 #        run: git tag test_tag1
 
       - name: Push release tag
