--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get version 0
-        run: echo "grep -oP "version = \'\K[^\']+" laktory/_version.py
+        run: echo "grep -oP "version = \'\K[^\']+" laktory/_version.py"
 
       - name: Get version
         id: get_version
