--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,11 +54,19 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get version 0
-        run: echo "grep -oP "version = \'\K[^\']+" laktory/_version.py"
+        run: |
+          import os
+          with open("./laktory/_version.py") as fp:
+            version = fp.read().split("=").strip()
+          print(f"version={version} >> $GITHUB_OUTPUT")
+        shell: python
+
+      - name: View version
+        run: echo ${{ steps.get_version.outputs.version }}
 
       - name: Get version
         id: get_version
-        run: echo "version=$(grep -oP "version = \'\K[^\']+" laktory/_version.py)" >> $GITHUB_OUTPUT
+        run: echo "version=$(grep -oP "version = \'\K[^\']+" .laktory/_version.py)" >> $GITHUB_OUTPUT
 
       - name: View version
         run: echo ${{ steps.get_version.outputs.version }}
