Test release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
           import os
           with open("./laktory/_version.py") as fp:
             version = fp.read().split("=")[-1].strip().replace('"', '')
-          print(f"version={version} >> $GITHUB_OUTPUT")
+          print(f'"version={version}" >> "$GITHUB_OUTPUT"')
         shell: python
 
       - name: View version
